--- a/src/eni/seis/theme/theme-east/src/less/pages/homepage.less
+++ b/src/eni/seis/theme/theme-east/src/less/pages/homepage.less
@@ -152,7 +152,7 @@
 
   .fp-section();
   .aow-slide {
-    padding: 1em;
+    padding: 1em 0 1em 0;
     &:hover .img-circle-cropper {
       background-color: #FFFFFF;
       border: 5px solid #FFFFFF;
